--- a/PrimaryHealthcareCentre.DoctorClient/App.xaml
+++ b/PrimaryHealthcareCentre.DoctorClient/App.xaml
@@ -1,9 +1,7 @@
-﻿<Application x:Class="PrimaryHealthcareCentre.PatientClient.App"
+﻿<Application x:Class="PrimaryHealthcareCentre.DoctorClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PrimaryHealthcareCentre.PatientClient"
-             xmlns:viewModel="clr-namespace:PrimaryHealthcareCentre.PatientClient.MVVM.ViewModel"
-             xmlns:view="clr-namespace:PrimaryHealthcareCentre.PatientClient.MVVM.View"
+             xmlns:local="clr-namespace:PrimaryHealthcareCentre.DoctorClient"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -13,18 +11,6 @@
                 <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/ListBoxItemTextBlock.xaml"/>
                 <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/ListBoxItemButton.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
-                <view:HomeView/>
-            </DataTemplate>
-            <DataTemplate DataType="{x:Type viewModel:DoctorsViewModel}">
-                <view:DoctorsView/>
-            </DataTemplate>
-            <DataTemplate DataType="{x:Type viewModel:MedicalCardViewModel}">
-                <view:MedicalCardView/>
-            </DataTemplate>
-            <DataTemplate DataType="{x:Type viewModel:PrescriptionsViewModel}">
-                <view:PrescriptionsView/>
-            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
