--- a/PrimaryHealthcareCentre.DoctorClient/App.xaml
+++ b/PrimaryHealthcareCentre.DoctorClient/App.xaml
@@ -11,13 +11,22 @@
                 <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/HeaderButton.xaml"/>
                 <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/MenuButton.xaml"/>
                 <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/ListBoxItemTextBlock.xaml"/>
+                <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/ListBoxItemTextBlock2.xaml"/>
                 <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/ListBoxItemButton.xaml"/>
+                <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/ListBoxItemButton2.xaml"/>
+                <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/ListBoxItemButton3.xaml"/>
+                <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/PatientDataTextBlock.xaml"/>
+                <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/ResultTextBox.xaml"/>
+                <ResourceDictionary Source="/PrimaryHealthcareCentre.UIComponent;Component/Styles/CustomGreenButton.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
                 <view:HomeView/>
             </DataTemplate>
             <DataTemplate DataType="{x:Type viewModel:PatientViewModel}">
                 <view:PatientView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:ExaminationViewModel}">
+                <view:ExaminationView/>
             </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
