--- a/PrimaryHealthcareCentre.DoctorClient/MVVM/View/PatientView.xaml
+++ b/PrimaryHealthcareCentre.DoctorClient/MVVM/View/PatientView.xaml
@@ -34,6 +34,8 @@
                                        Style="{StaticResource ListBoxItemTextBlockStyle}"/>
                             <TextBlock Text="{Binding Patient.Gender}"
                                        Style="{StaticResource ListBoxItemTextBlockStyle}"/>
+                            <TextBlock Text="{Binding Patient.DateOfBirth}"
+                                       Style="{StaticResource ListBoxItemTextBlockStyle}"/>
                             <TextBlock Text="{Binding Patient.PhoneNumber}"
                                        Style="{StaticResource ListBoxItemTextBlockStyle}"/>
                             <TextBlock Text="{Binding DateOfReception}"
