--- a/PrimaryHealthcareCentre.UIComponent/Styles/ListBoxItemTextBlock2.xaml
+++ b/PrimaryHealthcareCentre.UIComponent/Styles/ListBoxItemTextBlock2.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="{x:Type TextBlock}"
-           x:Key="ListBoxItemTextBlockStyle">
+           x:Key="ListBoxItemTextBlock2Style">
         <Style.Setters>
-            <Setter Property="Foreground" Value="#FFF8DC"/>
+            <Setter Property="Foreground" Value="#265F2F"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="Medium"/>
         </Style.Setters>
