--- a/PrimaryHealthcareCentre.UIComponent/Styles/PatientDataTextBlock.xaml
+++ b/PrimaryHealthcareCentre.UIComponent/Styles/PatientDataTextBlock.xaml
@@ -1,11 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="{x:Type TextBlock}"
-           x:Key="ListBoxItemTextBlockStyle">
+           x:Key="PatientDataTextBlockStyle">
         <Style.Setters>
-            <Setter Property="Foreground" Value="#FFF8DC"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="FontWeight" Value="Medium"/>
+            <Setter Property="Foreground" Value="#265F2F"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="Margin" Value="0,7"/>
+            <Setter Property="FontWeight" Value="Bold"/>
         </Style.Setters>
     </Style>
 </ResourceDictionary>
