--- a/PrimaryHealthcareCentre.PatientClient/MVVM/View/MedicalCardView.xaml
+++ b/PrimaryHealthcareCentre.PatientClient/MVVM/View/MedicalCardView.xaml
@@ -4,9 +4,94 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PrimaryHealthcareCentre.PatientClient.MVVM.View"
+             xmlns:viewModel="clr-namespace:PrimaryHealthcareCentre.PatientClient.MVVM.ViewModel"
+             xmlns:uc="clr-namespace:PrimaryHealthcareCentre.UIComponent.UserControl;assembly=PrimaryHealthcareCentre.UIComponent"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             d:DesignHeight="500" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewModel:MedicalCardViewModel/>
+    </UserControl.DataContext>
+    <Grid Margin="15,0,0,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2.3*"/>
+            <RowDefinition Height="3*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <StackPanel VerticalAlignment="Center">
+            <StackPanel Orientation="Horizontal"
+                        VerticalAlignment="Center"
+                        Margin="0,10,0,0">
+                <Image Width="48"
+                       Height="48"
+                       Source="/PrimaryHealthcareCentre.UIComponent;Component/Images/patient-green.png"/>
+                <TextBlock Text="Медична картка"
+                           Foreground="#265F2F"
+                           FontWeight="Bold"
+                           FontSize="24"
+                           VerticalAlignment="Center"
+                           Margin="10,0,0,0"/>
+            </StackPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2.1*"/>
+                    <ColumnDefinition Width="3*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel VerticalAlignment="Bottom">
+                    <TextBlock Text="П.І.П :"
+                           Style="{StaticResource PatientDataTextBlockStyle}"/>
+                    <TextBlock Text="Стать :"
+                           Style="{StaticResource PatientDataTextBlockStyle}"/>
+                    <TextBlock Text="Дата народження :"
+                           Style="{StaticResource PatientDataTextBlockStyle}"/>
+                    <TextBlock Text="Номер телефону :"
+                           Style="{StaticResource PatientDataTextBlockStyle}"/>
+                </StackPanel>
+                <StackPanel Grid.Column="1"
+                        VerticalAlignment="Center">
+                    <TextBlock Text="{Binding Patient.FullName}"
+                           Style="{StaticResource PatientDataTextBlockStyle}"/>
+                    <TextBlock Text="{Binding Patient.Gender}"
+                           Style="{StaticResource PatientDataTextBlockStyle}"/>
+                    <TextBlock Text="{Binding Patient.DateOfBirth}"
+                           Style="{StaticResource PatientDataTextBlockStyle}"/>
+                    <TextBlock Text="{Binding Patient.PhoneNumber}"
+                           Style="{StaticResource PatientDataTextBlockStyle}"/>
+                </StackPanel>
+            </Grid>
+        </StackPanel>
+        <StackPanel Grid.Column="1"
+                    Grid.RowSpan="2">
+            <TextBlock Text="Історія хвороби"
+                       Foreground="#265F2F"
+                       FontWeight="Bold"
+                       FontSize="24"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       Margin="0,5,0,0"/>
+            <StackPanel>
+                <TextBox TextWrapping="WrapWithOverflow"
+                         AcceptsReturn="True"
+                        Height="447"
+                         IsReadOnly="True"
+                        Style="{StaticResource FieldTextBox}" Width="274"/>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Grid.Row="1">
+            <TextBlock Text="Діагноз"
+                       Foreground="#265F2F"
+                       FontWeight="Bold"
+                       FontSize="24"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       Margin="0,5,0,0"/>
+            <TextBox TextWrapping="WrapWithOverflow"
+                      AcceptsReturn="True"
+                      Height="230"
+                      IsReadOnly="True"
+                      Style="{StaticResource FieldTextBox}" Width="274"/>
+        </StackPanel>
     </Grid>
 </UserControl>
