--- a/PrimaryHealthcareCentre.UIComponent/Styles/FieldTextBox.xaml
+++ b/PrimaryHealthcareCentre.UIComponent/Styles/FieldTextBox.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style BasedOn="{StaticResource {x:Type TextBox}}" 
            TargetType="{x:Type TextBox}"
-           x:Key="ResultTextBoxStyle">
+           x:Key="FieldTextBox">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
